Changelog
=========

0.4 - unreleased
----------------

- Re-introduced workflow-state colors with member.css. Closes
  https://jira.jarn.com/browse/INTRANETT-86
  [denys]

- Copied over styles for calendar that were missing for PloneFormGen calendars.
  Closes https://jira.jarn.com/browse/INTRANETT-106
  [denys]

- Removed hardcoded height for the thumbnails in employee-listing.
  [denys]


0.3 - 2010-10-25
----------------

- Split eployee-listing view into 2 columns to make the view more compact.
  Reduced the noise in departments listing and title.
  [denys]

- Employee listing styles for thumbnails view.
  [denys]

- Linked department info on the ``profile`` view to ``employee-listing`` of
  this department.
  [denys]

- Removed contact form from author.pt.
  [denys]

- Added employee-listing view.
  [ggozad]

- Added a ``robots.txt`` to disallow any robot from indexing the site.
  This refs #78.
  [hannosch]

- Prevent the front page view from being accessible by anonymous users.
  Refs #68.
  [hannosch]

- Hooked translations from ``intranett`` domain to profile view.
  [denys]

- Profile page (author.cpt). References #67.
  [denys]

- Fixed edge case of the frontpage when no portlets registered in the
  frontpage columns. Fixes #97.
  [denys, hannosch]

- Ajaxified publishing of a comment when comment_review_workflow is the main
  workflow for the comments.
  [denys]

- Prevent "You already clicked" message from showing up when filling out "Add
  comment" form.
  [denys]

- Live binding click event on "Delete" actions of the comments, returned by
  Ajax calls.
  [denys]

- Fixing styles for <header> so that it would not look broken without global
  navigation items.
  [denys]

- Styling and js support for comments. References #72.
  [denys]
  
- Added basic upgrade tests.
  [hannosch]  

- Fixed styling for footer of the site.
  [denys]

- Styles for Table of Contents. References #49.
  [denys]

- Print styles. References #51.
  [denys]

- New favicon.ico