@@ -4,6 +4,9 @@ Changelog
 0.4 - unreleased
 ----------------
 
+- Print stylesheets. References https://jira.jarn.com/browse/INTRANETT-51
+  [denys]
+
 - Re-introduced workflow-state colors with member.css. Closes
   https://jira.jarn.com/browse/INTRANETT-86
   [denys]
